--- a/Page WEB et ressources/Page-Histoire de Minecraft.html
+++ b/Page WEB et ressources/Page-Histoire de Minecraft.html
@@ -5,13 +5,11 @@
 
 
   <head>
-	<meta charset="UTF-8" />
-    <meta name="date" content="2023-03-24"/>
-	<link rel="stylesheet" type="text/css" href="CSS_P1.css"/>
-
-	<link rel="shortcut icon" href="https://4.bp.blogspot.com/-6AxJ7sE4iZA/X7Rn-fvQT4I/AAAAAAAAPck/LTEqX1cIshEhu6ypyISyjlYF48bbjgP_ACK4BGAYYCw/w640/1%2BSem%2BT%25C3%25ADtulo_20201117205518.png"/>
-
-    <title>L'Histoire de Minecraft</title>
+    <meta charset="UTF-8" />
+        <meta name="date" content="2023-03-24"/>
+	       <link rel="stylesheet" type="text/css" href="CSS_P1.css"/>
+                <link rel="shortcut icon" href="https://4.bp.blogspot.com/-6AxJ7sE4iZA/X7Rn-fvQT4I/AAAAAAAAPck/LTEqX1cIshEhu6ypyISyjlYF48bbjgP_ACK4BGAYYCw/w640/1%2BSem%2BT%25C3%25ADtulo_20201117205518.png"/>
+        <title>L'Histoire de Minecraft</title>
   </head>
 
   <body>
@@ -40,26 +38,21 @@
     <br/>
     <br/>
     <br/>
-     <h3>Et développé par Mojang Studios</h3>
-<img class="img2" src="https://www.logolynx.com/images/logolynx/e5/e52bec975527db7a861eb376cadd2994.jpeg" width="200" height="200"/>
-     <h3>Le jeu a été publié pour la première fois en 2011 et est rapidement devenu l'un des jeux les plus populaires de tous les temps.
-
-L'his-toire de Minecraft remonte au début des années 2000, lorsque Markus Persson a commencé à travailler sur un jeu appelé "RubyDung".</h3>
-<img class="img1" src="https://th.bing.com/th/id/OIP.r1SgkasvIB3bqBxOheDdegHaFj?pid=ImgDet&rs=1" width="400" height="200"/>
+<h3>Et développé par Mojang Studios</h3>
+        <img class="img2" src="https://www.logolynx.com/images/logolynx/e5/e52bec975527db7a861eb376cadd2994.jpeg" width="200" height="200"/>
+<h3>Le jeu a été publié pour la première fois en 2011 et est rapidement devenu l'un des jeux les plus populaires de tous les temps. L'his-toire de Minecraft remonte au début des années 2000, lorsque Markus Persson a commencé à travailler sur un jeu appelé "RubyDung".</h3>
+        <img class="img1" src="https://th.bing.com/th/id/OIP.r1SgkasvIB3bqBxOheDdegHaFj?pid=ImgDet&rs=1" width="400" height="200"/>
 
 <h3>Ce jeu, qui était un proto-type de ce qui allait devenir Minecraft, a été inspiré par des jeux de construction tels que Dwarf Fortress et Infiniminer.</h3>
-<br/>
-<br/>
+    <br/>
+    <br/>
 <h3>En 2009, Persson a commencé à travailler sur une version plus complète du jeu, qui allait devenir Minecraft. </h3>
 
 <h3>Le jeu a été publié pour la première fois en version alpha en 2010, et a rapidement attiré l'attention des joueurs du monde entier.</h3>
-<img class="img3" src="https://www.avcesar.com/source/actualites/00/00/6A/81/film-minecraft-sortie-en-2022_04145945.jpg" width="300" height="200"/>
+        <img class="img3" src="https://www.avcesar.com/source/actualites/00/00/6A/81/film-minecraft-sortie-en-2022_04145945.jpg" width="300" height="200"/>
 
-<h3>Au fil des années, Minecraft a connu de nombreuses mises à jour et améliorations, avec l'ajout de nouvelles fonctionnalités telles que des biomes, des créa-tures et des modes de jeu. En 2014, Microsoft a racheté Mojang Studios, le développeur de Minecraft, pour 2,5 milliards de dollars.
-
-</h3>
-<h3>Aujour-d'hui, Minecraft est disponible sur de nombreuses plateformes, y compris les ordinateurs, les consoles de jeux vidéo et les téléphones portables. Le jeu a été vendu à plus de 200 millions d'exemplaires dans le monde entier, ce qui en fait l'un des jeux les plus vendus de tous les temps.
-</h3>
+<h3>Au fil des années, Minecraft a connu de nombreuses mises à jour et améliorations, avec l'ajout de nouvelles fonctionnalités telles que des biomes, des créa-tures et des modes de jeu. En 2014, Microsoft a racheté Mojang Studios, le développeur de Minecraft, pour 2,5 milliards de dollars.</h3>
+<h3>Aujour-d'hui, Minecraft est disponible sur de nombreuses plateformes, y compris les ordinateurs, les consoles de jeux vidéo et les téléphones portables. Le jeu a été vendu à plus de 200 millions d'exemplaires dans le monde entier, ce qui en fait l'un des jeux les plus vendus de tous les temps.</h3>
     <br/>
     <br/>
 
@@ -67,10 +60,10 @@ L'his-toire de Minecraft remonte au début des années 2000, lorsque Markus Pers
 
 
 	<footer>
-    <div class="infos">
-<p>© 2023 None-official Minecraft</p><i><p class="maj">Dernière mise à jour le : 29/03/2023</p></i>
+        <div class="infos">
+            <p>© 2023 None-official Minecraft</p><i><p class="maj">Dernière mise à jour le : 06/04/2023</p></i>
+        </div>
 </font>
-</div>
 	</footer>
 
 </body>
