--- a/Page WEB et ressources/Page-Le magazin Minecraftien.html
+++ b/Page WEB et ressources/Page-Le magazin Minecraftien.html
@@ -27,11 +27,35 @@
     <br/>
 <font face="Minecraftia">
 <h1>Le magazin Minecraftien</h1>
+    <br/>
+    <br/>
+<h2>Ici vous trouverez divers livres officiels de Mojang</h2>
+<ul>
+    <li><a href="https://amzn.eu/d/7vcwGBV"><img class="img1" src="https://m.media-amazon.com/images/I/81rJHmrWTTL.jpg" width="auto" height="350" title="Guide Minecraft de survie"/></a></li>
+    <li><a href="https://amzn.eu/d/8psnMYt"><img class="img1" src="https://m.media-amazon.com/images/I/81bJ-AHbJkL.jpg" width="auto" height="350" title="Guide Minecraft de l'agriculture" /></a></li>
+    <li><a href="https://amzn.eu/d/0MCVTaQ"><img class="img1" src="https://m.media-amazon.com/images/I/81SiZN98h1L.jpg" width="auto" height="350" title="Guide Minecraft des océans" /></a></li>
+</ul>
+    <br/>
+<ul>
+    <li><a href="https://amzn.eu/d/d6NbE6c"><img class="img1" src="https://m.media-amazon.com/images/I/519sbIOmZiL.jpg" width="auto" height="350" title="Guide Minecraft des enchentements et potions" /></a></li>
+    <li><a href="https://amzn.eu/d/dqm9uxT"><img class="img1" src="https://m.media-amazon.com/images/I/816z3lY8OaL.jpg" width="auto" height="350" title="Guide Minecraft du nether et de l'End" /></a></li>
+    <li><a href="https://amzn.eu/d/fpnfLcp"><img class="img1" src="https://m.media-amazon.com/images/I/81eZicrLtZL.jpg" width="auto" height="350" title="Guide Minecraft de la redstone" /></a></li>
+</ul>
+    <br/>
+<ul>
+    <li><a href="https://amzn.eu/d/iZdNacu"><img class="img1" src="https://m.media-amazon.com/images/I/515T7DPH6yL.jpg" width="auto" height="350" title="Guide Minecraft du PVP mini-jeu" /></a></li>
+</ul>
+    <br/>
+    <br/>
+<h2>Ici vous pouvez acheter Minecraft</h2>
+<a href="https://www.minecraft.net/fr-fr/get-minecraft"><img class="img2" src="https://www.minecraft.net/content/dam/games/minecraft/logos/logo-minecraft.svg" width="auto" height="60" title="Obtenir minecraft" /></a>
+    <br/>
+    <br/>
+    <br/>
 
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
     <footer>
 <div class="infos">
-        <p class="copyright">© 2023 None-official Minecraft</p><i><p class="maj">Dernière mise à jour le : 06/04/2023</p></i>
+        <p class="copyright">© 2023 None-official Minecraft</p><i><p class="maj">Dernière mise à jour le : 11/04/2023</p></i>
     </font>
 </div>
     </footer>
